--- a/views/monitor-events-page.html
+++ b/views/monitor-events-page.html
@@ -1,3 +1,29 @@
+{{ define "modal-ping" }}
+<div class="modal modal-blur fade" id="modal-simple" tabindex="-1" role="dialog">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+				<div class="modal-content">
+						<div class="modal-header">
+								<h5 class="modal-title">
+										{{ if eq .Status 200 }}
+										{{ .Status }} OK
+										{{ else }}
+										{{ .Status }} NOTOK
+										{{ end }}
+								</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+						</div>
+						<div class="modal-body">
+								<pre style="text-wrap: wrap;"><code>{{ printf "%s" .Metadata }}</code></pre>
+								<div class="text-secondary">{{ createdAtDistanceWithAgo .CreatedAt }}</div>
+						</div>
+						<div class="modal-footer">
+								<button type="button" class="btn me-auto" data-bs-dismiss="modal">Close</button>
+						</div>
+				</div>
+		</div>
+</div>
+{{ end }}
+
 {{ define "monitor-events-table" }}
 {{ if .HasNextPage }}
 <tbody class="table-tbody" hx-get="/api/monitor/{{.MonitorID}}/table/events?page={{.NextPage}}" hx-trigger="revealed" hx-swap="afterend">
@@ -44,10 +70,11 @@
 		<tr>
 				<td class="d-flex justify-content-between align-items-center">
 						<div>
+								<!-- {{ template "modal-ping" . }} -->
 								<span class="tag" style="background: grey;color: white;">
 										Ping
 								</span>
-								<span class="tag">
+								<span id="ping-tag" class="tag" data-bs-toggle="modal" data-bs-target="#modal-simple" style="cursor: pointer;">
 										{{ if eq .Status 200 }}
 										<span class="badge bg-green text-green-fg tag-status badge-empty"></span>
 										{{ .Status }} OK
@@ -55,7 +82,13 @@
 										<span class="badge bg-red text-red-fg tag-status badge-empty"></span>
 										{{ .Status }} NOTOK
 										{{ end }}
+
 								</span>
+								<br>
+								<br>
+								<div style="text-wrap: wrap;">
+										<pre style="text-wrap: wrap;">{{ printf "%s" .Metadata }}</pre>
+								</div>
 						</div>
 						<div class="text-secondary text-end">{{ createdAtDistanceWithAgo .CreatedAt }}</div>
 				</td>
