--- a/views/monitor-events.html
+++ b/views/monitor-events.html
@@ -56,7 +56,8 @@
 																				<span class="tag" style="background: grey;color: white;">
 																						Ping
 																				</span>
-																				<span class="tag">
+																				<span class="tag" data-bs-toggle="modal" data-bs-target="#modal-simple" style="cursor: pointer;">
+																						<!-- {{ template "modal-ping" . }} -->
 																						{{ if eq .Status 200 }}
 																						<span class="badge bg-green text-green-fg tag-status badge-empty"></span>
 																						{{ .Status }} OK
