--- a/views/monitor-events.html
+++ b/views/monitor-events.html
@@ -53,8 +53,9 @@
 														<tr>
 																<td class="d-flex justify-content-between align-items-center">
 																		<div>
-																				<span class="tag" style="background: grey;color: white;">
-																						Ping
+																				<span class="tag" style="background: #96DED1;color: white;" data-bs-toggle="modal" data-bs-target="#simple-modal">
+																						{{ template "simple-modal" . }}
+																								Ping
 																				</span>
 																				<span class="tag" data-bs-toggle="modal" data-bs-target="#modal-simple" style="cursor: pointer;">
 																						<!-- {{ template "modal-ping" . }} -->
