--- a/views/modals.html
+++ b/views/modals.html
@@ -1,5 +1,19 @@
 {{ template "errors" . }}
 
+{{ define "simple-modal" }}
+<form class="modal modal-blur fade" id="simple-modal" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+				<div class="modal-content">
+						<div class="modal-body">
+								<div class="mb-3">
+										<pre style="text-wrap: wrap;">{{ printf "%s" .Metadata }}</pre>
+								</div>
+						</div>
+				</div>
+		</div>
+</form>
+{{ end }}
+
 {{ define "modal-report" }}
 <form class="modal modal-blur fade" id="modal-report" tabindex="-1" role="dialog" hx-swap="beforeend" hx-put="/api/monitor/{{.Monitor.ID}}" hx-target="body" aria-hidden="true">
 		<input type="text" name="monitor_id" value={{.Monitor.ID}} hidden>
