--- a/views/modals.html
+++ b/views/modals.html
@@ -1,7 +1,7 @@
 {{ template "errors" . }}
 
 {{ define "simple-modal" }}
-<form class="modal modal-blur fade" id="simple-modal" tabindex="-1" role="dialog" aria-hidden="true">
+<form class="modal modal-blur fade" id="simple-modal" tabindex="-1" role="dialog">
 		<div class="modal-dialog modal-lg modal-dialog-centered" role="document">
 				<div class="modal-content">
 						<div class="modal-body">
@@ -12,6 +12,15 @@
 				</div>
 		</div>
 </form>
+<script>
+		document.getElementById('ping-tag').addEventListener('click', function() {
+				modalOpen = true;
+		});
+
+		document.querySelector("#simple-modal").addEventListener('hidden.bs.modal', function(event) {
+				modalOpen = false;
+		})
+</script>
 {{ end }}
 
 {{ define "modal-report" }}
