fix: optimize css, add meta tags and improve seo

--- a/views/project.html
+++ b/views/project.html
@@ -192,7 +192,7 @@
 																														<a href="./forgot-password.html" class="dropdown-item">
 																																Forgot password
 																														</a>
-																														<a href="./terms-of-service.html" class="dropdown-item">
+																														<a href="./terms.html" class="dropdown-item">
 																																Terms of service
 																														</a>
 																														<a href="./auth-lock.html" class="dropdown-item">
@@ -2837,10 +2837,6 @@
 								</div>
 						</div>
 				</div>
-				<!-- Libs JS -->
-				<!-- Tabler Core -->
-				<script src="/static/js/tabler.min.js?1692870487" defer></script>
-				<script src="/static/js/demo.min.js?1692870487" defer></script>
 		</body>
 </html>
 
