--- a/views/base.html
+++ b/views/base.html
@@ -43,12 +43,15 @@
 {{ block "base" . }}
 <head>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Monitor cron jobs">
 		<link href="/static/css/tabler.min.css?1692870487" rel="stylesheet"/>
-		<link href="/static/css/tabler-flags.min.css?1692870487" rel="stylesheet"/>
+
+		<link rel="preload" href="/static/css/tabler-flags.min.css?1692870487" as="style" onload="this.onload=null;this.rel='stylesheet'">
+		<noscript><link rel="stylesheet" href="/static/css/tabler-flags.min.css?1692870487"></noscript>
+
 		<link href="/static/css/tabler-payments.min.css?1692870487" rel="stylesheet"/>
 		<link href="/static/css/tabler-vendors.min.css?1692870487" rel="stylesheet"/>
-		<link href="/static/css/demo.min.css?1692870487" rel="stylesheet"/>
-		<script src="https://unpkg.com/htmx.org@2.0.1"></script>
+		<script src="https://unpkg.com/htmx.org@2.0.1" defer></script>
 		{{ if .Monitor.Status }}
 				{{ if eq .Monitor.Status "up" }}
 						{{ template "up-favicons" . }}
@@ -98,7 +101,7 @@ a {
 						</button>
 						<h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
 								<a href="/">
-										<img src="/static/img/logo.svg" width="110" height="32" alt="outagealert.io" class="navbar-brand-image">
+										<img src="/static/img/logo.svg" width="110" height="32" alt="outagealert.dev" class="navbar-brand-image">
 								</a>
 								outagealert
 						</h1>
@@ -122,10 +125,6 @@ a {
 				</div>
 
 		</header>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.x.x/dist/js/bootstrap.bundle.min.js"></script>
-		<script src="/static/js/demo-theme.min.js?1692870487"></script>
-		<script src="/static/js/tabler.min.js?1692870487" defer></script>
-		<script src="/static/js/demo.min.js?1692870487" defer></script>
 </body>
 {{ end }}
 
