--- a/views/forgot-password.html
+++ b/views/forgot-password.html
@@ -7,8 +7,9 @@
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<meta name="description" content="Forgot password">
     <title>
-      Forgot password - outagealert
+				Forgot password
     </title>
     {{ template "base" }}
   </head>
@@ -79,8 +80,5 @@
         </div>
       </div>
     </div>
-    <!-- Libs JS -->
-    <script src="/static/js/tabler.min.js?1692870487" defer></script>
-    <script src="/static/js/demo.min.js?1692870487" defer></script>
   </body>
 </html>
