--- a/views/signin.html
+++ b/views/signin.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+		<meta name="description" content="Login to outagealert.dev">
+    <title>Signin to outagealert.dev</title>
 		{{ template "base" }}
   </head>
   <body class=" d-flex flex-column">
@@ -51,8 +53,6 @@
       </div>
     </div>
     <!-- Libs JS -->
-    <script src="/static/js/tabler.min.js?1692870487" defer></script>
-    <script src="/static/js/demo.min.js?1692870487" defer></script>
 		<script>
 document.addEventListener('DOMContentLoaded', function() {
   const passwordInput = document.getElementById('passwordInput');
