--- a/views/signup.html
+++ b/views/signup.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Signup - outagealert</title>
+		<meta name="description" content="Signup to outagealert.dev">
+    <title>Signup to outagealert.dev</title>
 		{{ template "base" }}
   </head>
   <body class=" d-flex flex-column">
@@ -59,7 +60,6 @@
       </div>
 
     </div>
-    <script src="/static/js/tabler.min.js?1692870487" defer></script>
     <script src="/static/js/demo.min.js?1692870487" defer></script>
 		<script>
 document.addEventListener('DOMContentLoaded', function() {
