--- a/views/base.html
+++ b/views/base.html
@@ -125,6 +125,7 @@ a {
 				</div>
 
 		</header>
+-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.x.x/dist/js/bootstrap.bundle.min.js" defer></script>
 </body>
 {{ end }}
 
