--- a/views/pricing.html
+++ b/views/pricing.html
@@ -3,9 +3,8 @@
 		<head>
 				<meta charset="UTF-8">
 				<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<meta name="description" content="Pricing tiers">
-				<title>Pricing tiers</title>
-				<script src="https://www.paypal.com/sdk/js?client-id=AfXmSg_EyAbi0J13tuX5yy-ErT59xqXntYmRkSRF74JluM1Fnu7Q-1eOdBvVqKueD7cVWvOaKUxvHIc5"></script>
+				<meta name="description" content="outagealert pricing">
+				<title>outagealert pricing</title>
 				<script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
 				{{ template "base" }}
 				{{ template "errors" }}
